--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,23 @@ body {
 }
 
 
+.time-modify-btn {
+    background: #5be85b;
+    width: 100%;
+    height: 5vh;
+    color: #fff;
+    transition: all 0.1s;
+    user-select: none;
+    box-shadow: 0 0 3px green;
+}
 
+.time-modify-btn:active {
+    box-shadow: inset 0 0 7px green;
+}
+
+.time-modify-btn:hover {
+    background: #56d056;
+}
 
 
 
