--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,7 +16,7 @@ body {
     line-height: 1.6rem;
     background: #5be85b;
     width: 100%;
-    height: 5vh;
+    height: 1.8rem;
     color: #fff;
     transition: all 0.1s;
     user-select: none;
