--- a/src/css/index.css
+++ b/src/css/index.css
@@ -153,14 +153,15 @@
 /*********************************************************/
 
 #main-ui {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: .5rem;
-  height: 97vh;
-  position: relative;
-  box-sizing: border-box;
+    margin: auto;
+    max-width: 38rem;
+    padding: .5rem;
+    height: 89vh;
+    position: relative;
+    box-sizing: border-box;
+    user-select: none;
 }
 
 
